syntax = "proto3";
package haberdasher;
option go_package = "./haberdasher";

// Haberdasher service makes hats for clients.
service Haberdasher {
    // MakeHat produces a hat of mysterious, randomly-selected color!
    rpc MakeHat(Size) returns (Hat);
    rpc ColorHat(Color) returns (Hat);
    rpc ColorSizeHat(ColorSize) returns (Hat);

  }
  
  message ColorSize {
    int32 inches = 1; 
    string value = 2; 
  }


  // Size of a Hat, in inches.
  message Size {
    int32 inches = 1; 
  }

  message Color {
    string value = 1; 
  }
  
  // A Hat is a piece of headwear made by a Haberdasher.
  message Hat {
    int32 inches = 1;
    string color = 2; // anything but "invisible"
    string name = 3; // i.e. "bowler"
  }
